# Vats

./: .gitignore  101-300  134-200  167-500  201-300  334-500  34-100  67-100  67-200  Cargo.toml  LICENSE  README.md  benchmark_keygen.txt  lam_run.sh  run_app.sh  test.txt
benches/: my_benchmark.rs
benchmark/: bench.ipynb  bench.py
benchmark/.ipynb_checkpoints/: bench-checkpoint.ipynb
benchmark/Times/: 101-300  134-200  167-500  201-300  334-500  34-100  67-100  67-200  bench.ipynb
benchmark/Times_exluded_keyupd/: 101-300  134-200  167-500  201-300  bench.ipynb
benchmark/Times_micro/: 10-13  101-300  11-21  13-17  13-25  134-200  15-21  15-25  167-500  17-17  17-29  19-25  19-33  20-21  201-300  23-29  25-33  3-5  334-500  34-100  5-9  67-100  67-200  7-13  7-9  9-17  bench.ipynb  table_data.csv
benchmark/keygen/: benchmark_keygen_5_n.txt  benchmark_keygen_t=0.5n.txt  benchmark_keygen_t_200.txt
docker_x509/: make_clients.sh
docker_x509/ca/: ca.srl  make_clients.sh
docker_x509/central/: central.pem
docker_x509/ecu1/: ecu1.crt  ecu1.csr  ecu1.key  ecu1.pem
docker_x509/ecu2/: ecu2.crt  ecu2.csr  ecu2.key  ecu2.pem
docker_x509/ecu3/: ecu3.crt  ecu3.csr  ecu3.key  ecu3.pem
docker_x509/ecu4/: ecu4.crt  ecu4.csr  ecu4.key  ecu4.pem
docker_x509/ecu5/: ecu5.crt  ecu5.csr  ecu5.key  ecu5.pem
src/: client.rs  cmd_center.rs  header.rs  helper.rs  lib.rs  main.rs  main.rs.bak  new_main.rs  server.rs  test_signing.rs  testground.rs  util.rs  xfce_test4.sh
src/dealer/: dumb_keygen.rs  keyAgg.rs  key_dealer.rs  keygen.rs  mod.rs  muSigCoef.rs  signAgg.rs  (+4 more)
(+23 files in other folders)
