[package]
name = "vats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug"]}
env_logger = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
tokio = {version = "1.12", features = ["full"]}
lazy_static = "1.4"
flume = "0.10.14"
regex = "1"
bincode = "1.3"
curve25519-dalek = "3"
rand = "0.7"
sha2 = "0.10.6"
zeroize = "1.5.7"
pbr = "1.0.4"
base64 = "0.21"


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]